# OpenTracker

./: .gitignore  readme.md
eco/: CMakeLists.txt  eco.cc  eco.hpp  feature_extractor.cc  ffttools.hpp  fhog.cc  fhog.hpp  interpolator.hpp  makefile  parameters.hpp  recttools.hpp  runecotracker.cc  scale_filter.cc
eco/pkgconfig/: opencv.pc
example/: CMakeLists.txt  run_opentracker_example.cc
